# KGAFTEngine

./: .gitignore  .gitmodules  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  KGAFTEngine.sln  KGAFTEngine.vcxproj  KGAFTEngine.vcxproj.filters  README.md  VulkanCXXLearn  build.ninja  cmake_install.cmake
.cmake/api/v1/reply/: cache-v2-4643deacb6010619c65c.json  cache-v2-e27cafbe113bca3c4fdd.json  cmakeFiles-v1-1dd6fcc6966586fae7d3.json  cmakeFiles-v1-967dd768282b4967e469.json  codemodel-v2-8c0032fd44106cfaa442.json  codemodel-v2-ac04fc932c0055dd499c.json  directory-lib.glfw-1b40de2241af25c03253.json  directory-lib.glfw.src-b444fd11e65ab6001ce4.json  directory-lib.glfw.tests-fdee3d9d87bdb825ea5d.json  index-2023-01-24T19-12-43-0392.json  index-2023-01-25T17-51-36-0879.json  target-VulkanCXXLearn-03c5f6b1bc1ec8776658.json  target-VulkanCXXLearn-dc0ffc90aa63ec9d95fb.json  target-boing-4682a6c48afd05b18261.json  target-clipboard-af586066077af057df5a.json  target-cursor-2f58585e401e466f426e.json  target-empty-c308bb511064e334d082.json  target-events-836e0c35203b4c553d51.json  target-gamma-259f182bf3f8bb22bf99.json  target-gears-c964187edb7d7f225519.json  target-glfw-645065dde966a76bef1e.json  target-glfwinfo-3495f850a15defc5bb2f.json  target-heightmap-3d29fb3b1387228017cc.json  target-icon-4a17d5fadc3ecbb7d052.json  target-iconify-211508c677f9b7fae78e.json  target-inputlag-f5cea33560bfeada235c.json  target-joysticks-75a68fa788ea8b773e37.json  target-monitors-1b1e4c5a2d11a846961a.json  target-msaa-ca276d6d6c2a8f2ceef4.json  target-offscreen-64804766d4a9251a6f18.json  target-opacity-eabae9ed106c7f552c7c.json  target-particles-8fe629358beb89db7eef.json  target-reopen-e9bddc960f2746b1974b.json  target-sharing-397bedc0b9c43e425931.json  target-simple-398af38a7e2f4f029914.json  target-splitview-e07e473f833b802ad057.json  target-tearing-e18a9eb41b00cec7dd01.json  target-threads-1f32d7bbec4cc3bbcdb9.json  target-timeout-9b433f2a0f92662f61ae.json  target-title-74b447cfeb138b83d4a5.json  (+5 more)
lib/glfw/: GLFW.cbp  Makefile  cmake_install.cmake  cmake_uninstall.cmake
lib/glfw/docs/: CONTRIBUTING.md  Doxyfile.in  build.dox  input.dox  intro.dox  main.dox  moving.dox  news.dox  quick.dox  vulkan.dox  window.dox
lib/glfw/docs/html/: build_guide.html  group__input.html  group__vulkan.html  group__window.html  index.html  input_guide.html  intro_guide.html  jquery.js  moving_guide.html  news.html  quick_guide.html  vulkan_guide.html  window_guide.html
lib/glfw/examples/: Makefile  cmake_install.cmake
lib/glfw/include/GLFW/: glfw3.h
lib/glfw/src/: CMakeLists.txt  Makefile  cmake_install.cmake  egl_context.c  win32_monitor.c
lib/glfw/tests/: Makefile  cmake_install.cmake  triangle-vulkan.c
lib/glm/doc/: man.doxy
models/StWall/: SM_ModuleWall_5_5_x_6_5.gltf
models/binocular/: Binoculars from World War.fbx
models/capsule/: CAPSULE_1.mtl
models/garage/: Abandoned Service Garage - Box Fan.mtl
models/grind/: scene.gltf
models/pokedex/: pokedex.gltf
models/station/: license.txt  scene.gltf
src/cxx/: main.cpp
src/cxx/Camera/: Camera.h  CameraManager.h  CameraMovementCallBack.h  CameraRotationCallBack.h
src/cxx/Engine/: Deferred.h  PbrEngine.h  PbrRenderPipeline.h  RenderPipeline.h  ShaderInputDataConfiguration.h  TestRenderPipeline.h
src/cxx/Engine/Camera/: CameraMovementCallBack.h  CameraResizeCallBack.h  CameraRotationCallBack.h
src/cxx/Engine/GraphicalObjects/: Mesh.h
src/cxx/Engine/RenderPipeline/: RenderPipeline.h  ShaderInputDataConfiguration.h
src/cxx/Engine/Util/: AssimpGLMHelper.h  ModelLoader.h
src/cxx/VulkanContext/: VulkanInstance.h
src/cxx/VulkanContext/GraphicsPipeline/: GraphicsPipeline.h  IDescriptorLayoutObject.h  PipelineConfig.h  VulkanShader.h
src/cxx/Window/: KeyBoardCallBack.h  MouseMovedCallBack.h  Window.h  WindowResizeCallback.h
src/spir-v/: default.frag  default.vert  simple_shader.vert
src/spir-v/PbrRenderPipeline/: .shaderconf  default.frag  default.vert
(+26 files in other folders)
